# freelancer

./: .gitignore  README.md
apps/web/: package.json
apps/web/src/app/: layout.js  page.js
apps/web/src/app/profile/: page.js  profile-client.jsx
apps/web/src/app/settings/: page.js  settings-client.jsx
apps/web/src/components/: README.md  footer.jsx  gallery.jsx  header.jsx  logo.jsx
apps/web/src/data/: agents.js  menus.js
apps/web/src/hooks/: README.md
backend/: README.md  main.py  pyproject.toml
backend/agents/tech_logo/: agents.py  state.py  workflow.py
backend/llms/: logo.py  openai.py
backend/static/: index.html
