[project]
name = "freelancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.13",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "openai>=1.88.0",
    "openai-agents>=0.0.19",
    "openai-sdk>=0.1.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
